--- a/api/build.gradle
+++ b/api/build.gradle
@@ -19,6 +19,11 @@ repositories {
     mavenCentral()
 }
 
+configurations.all {
+    resolutionStrategy.force 'org.apache.poi:poi:5.2.5'
+    resolutionStrategy.force 'org.apache.poi:poi-ooxml:5.2.5'
+}
+
 dependencies {
 
     // Core Spring Boot Starters
@@ -37,9 +42,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-data-rest-test'
+    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
+   implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
 }
 
 tasks.named('test') {
